--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,26 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
+    runtime-versions:
+      python: 3.8
     commands:
       - pip install -r requirements.txt
+  pre_build:
+    commands:
+      - coverage erase
+  build:
+    commands:
+      - coverage run -m pytest
+  post_build:
+    commands:
+      - coverage report --fail-under=80
+reports:
+  coverage:
+    files:
+      - "htmlcov/*"
+    base-directory: "./"
+    
 artifacts:
   files:
     - '**/*'
