--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       python: 3.8
     commands:
       - pip install -r requirements.txt
+      - pip install coverage
   pre_build:
     commands:
       - coverage erase
