--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       python: 3.8
     commands:
       - pip install -r requirements.txt
-      - pip install coverage
+      - pip install pytest coverage
   pre_build:
     commands:
       - coverage erase
